# codeband

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
docker/: Dockerfile.claude  Dockerfile.codex  docker-compose.distributed.yml  docker-compose.yml  entrypoint.sh
docs/: AUTHENTICATION.md  CONFIGURATION.md  MIGRATION.md  TROUBLESHOOTING.md  engineering-brief.md  rfc-deterministic-orchestration.md
docs/commands/: README.md  codeband.md
docs/design/: verifier-seat.md
proposed/integrated/knowledge/: security.md  testing.md
proposed/integrated/prompts/: coder.md  conductor.md  plan_reviewer.md  planner.md
src/codeband/: __init__.py  cli.py  config.py  doctor.py  logging_setup.py  models.py  preflight.py  roster.py  utility_llm.py
src/codeband/agents/: code_reviewer.py  conductor.py  mergemaster.py  plan_reviewer.py  planner.py  player_claude.py  player_codex.py  prompts.py  verifier.py  watchdog.py  watchdog_probe.py
src/codeband/cli/: __init__.py  handoff.py  merge.py
src/codeband/github/: __init__.py  issues.py  prs.py
src/codeband/knowledge/: coding-standards.md
src/codeband/memory/: __init__.py  local_store.py  probe.py
src/codeband/monitoring/: __init__.py  activity_log.py  attempt_window.py  feed.py  usage.py
src/codeband/orchestration/: agent_main.py  compose.py  kickoff.py  runner.py  session_agent.py  setup.py
src/codeband/prompts/: code_reviewer.md  coder.md  conductor.md  mergemaster.md  plan_reviewer.md  planner.md  verifier.md
src/codeband/session/: __init__.py  context.py  identity.py  supervisor.py
src/codeband/shell/: __init__.py  commands.py  fs.py  render.py  repl.py
src/codeband/state/: __init__.py  fsm.py  registration.py  rehydration.py  store.py
src/codeband/transport/: __init__.py  jam_control.py  jam_runtime.py
src/codeband/workers/: __init__.py  pool.py
src/codeband/workspace/: diff.py  git.py  init.py
tests/: conftest.py  test_activity_log.py  test_adapter_features.py  test_agent_permission_modes.py  test_attempt_window.py  test_attribution.py  test_band_namespace.py  test_cli_dotenv.py  test_cli_github_auth.py  test_cli_hardening.py  test_cli_misc.py  test_cli_planner_profile.py  test_cli_room_log.py  test_cli_run_output.py  test_codex_mitigations.py  test_config.py  test_df5_observability.py  test_diff.py  test_doctor.py  test_evidence_integrity.py  test_feed.py  test_fsm.py  test_handoff.py  test_idempotent_noop.py  test_issues.py  test_jam_delivery.py  test_kickoff.py  test_kickoff_status.py  test_local_memory.py  test_logging_setup.py  test_memory_probe.py  test_merge_gate.py  test_merge_helpers.py  test_merge_leg.py  test_peer_governance.py  test_pin_detection_agreement.py  test_preflight.py  test_project_dir_resolution.py  test_prompt_error_reporting.py  test_prompt_invariants.py  (+34 more)
