[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeband"
version = "0.1.1"
description = "Multi-agent coding orchestration via Band.ai"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Band.ai" }]
license = { text = "MIT" }
keywords = [
    "agents",
    "ai-agents",
    "automation",
    "band",
    "claude-code",
    "codex",
    "code-review",
    "coding",
    "coding-agent",
    "multi-agent",
    "orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # <0.3: band-sdk 1.0.0 renames the thenvoi.* module namespace to band.*
    # with no compatibility shim — an uncapped pin breaks fresh installs.
    "band-sdk[codex,claude-sdk]>=0.2.8,<0.3",
    # Imported directly (thenvoi.client.rest) in several modules; must be
    # declared, not inherited transitively through band-sdk.
    "thenvoi-client-rest>=0.0.7,<0.1",
    "click>=8.2,<9",
    "pyyaml>=6.0",
    "pydantic>=2.0,<3",
    "python-dotenv>=1.0",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
cb = "codeband.cli:main"
codeband = "codeband.cli:main"
cb-phase = "codeband.cli.handoff:main"

[project.urls]
Homepage = "https://github.com/thenvoi/codeband"
Documentation = "https://github.com/thenvoi/codeband#documentation"
Repository = "https://github.com/thenvoi/codeband"
Issues = "https://github.com/thenvoi/codeband/issues"
Changelog = "https://github.com/thenvoi/codeband/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codeband = ["prompts/*.md", "knowledge/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_dotenv: test exercises real .env loading — opt out of the _isolate_dotenv autouse fixture",
]

[tool.ruff]
target-version = "py311"
line-length = 100
